10-nexus/nexus-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  type: ClusterIP
  selector:
    app: sonatype-nexus
    release: nexusrepo
  ports:
    - name: docker
      port: 5000
      targetPort: 5000
