10-nexus/nexus-docker-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus-registry
  namespace: nexus
spec:
  host: "" 
  to:
    kind: Service
    name: nexus-docker
  port:
    targetPort: docker
  tls:
    termination: edge
