10-nexus/nexus-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus-ui
  namespace: nexus
spec:
  host: "" 
  to:
    kind: Service
    name: nexusrepo-sonatype-nexus-service
  port:
    targetPort: application
  tls:
    termination: edge
